client/src/pages/Entry/Entry.css
.entry__container {
    padding: 10px 10% 10px 10%;
    height: 100%;
}

.entry__container .basic-info {
    max-width: 100%;
    height: 64px;
    padding: 10px;
    background-color: var(--SharkDarkSub);
    display: flex;
    align-items: center;
    margin: 15px;
    border-radius: 10px;
}

.basic-info-left {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex: 2;
}

.basic-info > div {
    height: 100%;
}

.basic-info .icon {
    width: 100px;
    display: grid;
    place-items: center;
    font-size: xx-large;
    color: var(--Teal);
}

.basic-info .name {
    display: grid;
    place-items: center;
    font-size: large;
    max-width: 200px;
    color: var(--Teal);
}

.basic-info .date {
    display: grid;
    font-size: large;
    place-items: center;
    width: 100px;
    margin-left: 1em;
    color: var(--Grey);
}

.entry-content {
    padding: 10px 40px 10px 40px;
    margin: 15px;
    margin-bottom: 40px;
    max-width: 100%;
    background-color: var(--SharkDark);
    border-radius: 10px;
    min-height: 30%;
}

.basic-info-right {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    flex: 1;
}

.entry-button {
    flex: 1;
    max-width: 100px;
    margin-left: 1em;
    transition: 200ms;
}

.entry__container .hide {
    opacity: 0;
}

.edit-name-menu {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-bottom: 1em;
    font-size: medium;
    font-weight: bold;
}

.edit-name {
    margin-left: 1em;
}

.entry__container .basic-info-mobile-menu {
    display: none;
}

.edit-name:focus {
    border: 1px solid var(--Teal) !important;
}

@media screen and (max-width: 1440px) {
    .entry__container {
        padding: 10px;
    }
}

@media screen and (max-width: 1024px) {
    .entry__container .basic-info {
    }

    .basic-info-right {
        display: none;
    }

    .entry__container .basic-info-mobile-menu {
        display: flex;
        height: 64px;
        display: flex;
        align-items: center;
        justify-content: flex-end;
    }

}

